--- a/index.html
+++ b/index.html
@@ -66,8 +66,7 @@
             <div class="header__social">
               <span>Аккаунты в сетях:</span>
               <a href="https://vk.com/aquel_shop" target="_blank">
-                <svg class="vk-icon" x="0px" y="0px" width="20" height="20" viewBox="0 0 548.358 548.358" style="enable-background:new 0 0 548.358 548.358;"
-                xml:space="preserve">
+                <svg class="vk-icon" x="0px" y="0px" width="20" height="20" viewBox="0 0 548.358 548.358" xml:space="preserve">
                 <g>
                   <path d="M545.451,400.298c-0.664-1.431-1.283-2.618-1.858-3.569c-9.514-17.135-27.695-38.167-54.532-63.102l-0.567-0.571
                   l-0.284-0.28l-0.287-0.287h-0.288c-12.18-11.611-19.893-19.418-23.123-23.415c-5.91-7.614-7.234-15.321-4.004-23.13
@@ -104,8 +103,7 @@
               </svg>
             </a>
             <a href="">
-            <svg class="od-icon" x="0px" y="0px" width="20" height="20" viewBox="0 0 95.481 95.481" style="enable-background:new 0 0 95.481 95.481;"
-              xml:space="preserve">
+            <svg class="od-icon" x="0px" y="0px" width="20" height="20" viewBox="0 0 95.481 95.481" xml:space="preserve">
               <g>
                 <path d="M43.041,67.254c-7.402-0.772-14.076-2.595-19.79-7.064c-0.709-0.556-1.441-1.092-2.088-1.713
                 c-2.501-2.402-2.753-5.153-0.774-7.988c1.693-2.426,4.535-3.075,7.489-1.682c0.572,0.27,1.117,0.607,1.639,0.969
@@ -714,8 +712,7 @@
           </div>
           <div class="footer__copyright-social">
               <a href="https://vk.com/aquel_shop" target="_blank">
-                <svg x="0px" y="0px" width="20" height="20" viewBox="0 0 548.358 548.358" style="enable-background:new 0 0 548.358 548.358;"
-                xml:space="preserve">
+                <svg x="0px" y="0px" width="20" height="20" viewBox="0 0 548.358 548.358" xml:space="preserve">
                 <g>
                   <path d="M545.451,400.298c-0.664-1.431-1.283-2.618-1.858-3.569c-9.514-17.135-27.695-38.167-54.532-63.102l-0.567-0.571
                   l-0.284-0.28l-0.287-0.287h-0.288c-12.18-11.611-19.893-19.418-23.123-23.415c-5.91-7.614-7.234-15.321-4.004-23.13
@@ -752,8 +749,7 @@
               </svg>
             </a>
             <a href="">
-            <svg x="0px" y="0px" width="20" height="20" viewBox="0 0 95.481 95.481" style="enable-background:new 0 0 95.481 95.481;"
-              xml:space="preserve">
+            <svg x="0px" y="0px" width="20" height="20" viewBox="0 0 95.481 95.481" xml:space="preserve">
               <g>
                 <path d="M43.041,67.254c-7.402-0.772-14.076-2.595-19.79-7.064c-0.709-0.556-1.441-1.092-2.088-1.713
                 c-2.501-2.402-2.753-5.153-0.774-7.988c1.693-2.426,4.535-3.075,7.489-1.682c0.572,0.27,1.117,0.607,1.639,0.969
