Add 2 new product page

--- a/catalog/aquel-200.html
+++ b/catalog/aquel-200.html
@@ -202,7 +202,7 @@
 
                 <ul class="nav navbar-nav">
                   <li class="dropdown">
-                    <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Каталог <span class="caret"></span></a>
+                    <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Фильтры <span class="caret"></span></a>
                     <ul class="dropdown-menu">
                       <li><a href="../catalog/aquel-200.html">Фильтр Aquel 200</a></li>
                       <li role="separator" class="divider"></li>
@@ -231,20 +231,30 @@
 
         <div class="single-product">
           <div class="container-article">
+            <div class="back-wrapper">
+              <a href="../catalog.html" class="back-button">НАЗАД</a>
+            </div>
+
+            <div class="single-product__img-block">
+              <img class="single-product__img" src="../img/aquel-200+box-slider.png" alt="">
+            </div>
 
             <div class="single-product__content-block">
-              <h1 class="single-product__title">Фильтр</h1>
-              <h2 class="single-product__sub-title">AQUEL 200</h2>
-              <p class="single-product__price">45 990 ₽</p>
-              <p class="single-product__content">Идеально для дома</p>
-              <p class="single-product__content">Бесплатная доставка, 2-10 дней</p>
-              <p class="single-product__content">Монтаж за наш счет в 31 городе РФ</p>
+              <div class="single-product__header">
+                <h1 class="single-product__title">ФИЛЬТР</h1>
+                <p class="single-product__price">45 990 ₽</p>
+                <h2 class="single-product__sub-title">AQUEL 200</h2>
+              </div>
+
+              <ul class="single-product__list">
+                <li class="single-product__list-item-aquel-200-one">Идеально для дома</li>
+                <li class="single-product__list-item-aquel-200-two">Бесплатная доставка, 2-10 дней</li>
+                <li class="single-product__list-item-aquel-200-three">Монтаж за наш счет в 31 городе РФ</li>
+              </ul>
+
+              <div class="single-product__button-wrapper">
             </div>
-            <div class="single-product__img-block">
-              <img class="single-product__img" src="../img/small-aquel-200.png" alt="">
-            </div>
-            <div class="single-product__button-wrapper">
-              <a href="#collapsePayment" class="btn btn-default btn--buy" role="button" data-toggle="collapse" aria-expanded="false" aria-controls="collapsePayment">ОФОРМИТЬ</a>
+              <a href="#collapsePayment" class="btn btn-default btn--buy" role="button" data-toggle="collapse" aria-expanded="false" aria-controls="collapsePayment">ОФОРМИТЬ ЗАКАЗ</a>
               <div class="collapse" id="collapsePayment">
                 <div class="well">
 
@@ -312,153 +322,117 @@
 
         <div class="advantages">
           <div class="container-article">
-            <!-- Nav tabs -->
-            <ul class="nav nav-tabs" role="tablist">
-              <li role="presentation" class="active"><a href="#description" aria-controls="description" role="tab" data-toggle="tab">Описание</a></li>
-              <li role="presentation"><a href="#feature" aria-controls="feature" role="tab" data-toggle="tab">Характеристики</a></li>
-              <li role="presentation"><a href="#advantages" aria-controls="advantages" role="tab" data-toggle="tab">Преимущества</a></li>
-              <li role="presentation"><a href="#delivery" aria-controls="delivery" role="tab" data-toggle="tab">Доставка</a></li>
+            <h3 class="product__description">ОПИСАНИЕ</h3>
+            <p class="product__content">Основой фильтров для воды <b>AQUEL</b> является полупроницаемая мембрана. Эта, первоначально  военная технология, постепенно, благодаря техническому прогрессу, находит путь в доступные по цене фильтрующие устройства для быта и промышленных предприятий. Величина самой маленькой известной бактерии на Земле составляет 0,009 микрона, величина самого маленького известного вируса 0,02 микрона. Отверстие в полупроницаемой мембране имеет диаметр 0,0005 микрона!</p>
+            <p class="product__content">Единственное, что мембрана пропускает, это молекула воды и некоторое количество минералов и солей. Благодаря этому можно получить совершенно чистую воду из любого загрязненного источника. Так же, благодаря физическому явлению, называемому осмотическое давление, фильтры для воды <b>AQUEL</b> не нуждаются для своей работы в электричестве, достаточно небольшого давления воды на входе.</p>
+
+            <h3 class="product__feature">ХАРАКТЕРИСТИКИ</h3>
+            <ul class="product__conten-list">
+              <li><span>Пригоден для воды из городского водопровода</span></li>
+              <li><span>Установка под умывальник или согласно планировке заказчика.</span></li>
+              <li><span>Эффективность фильтрации до 192 литров в сутки (может быть увеличена до 576 литров в сутки)</span></li>
+              <li><span>Оптимальные условия работы: температура воды на входе 10-30 градусов по Цельсию, давление 2,45 - 10,5 бар</span></li>
+              <li><span>Эффективность фильтрации 85 - 98 %</span></li>
+              <li><span>Размеры:</span>
+                <ul>
+                  <li><span>высота: 420 мм.</span></li>
+                  <li><span>ширина: 380 мм.</span></li>
+                  <li><span>глубина: 180 мм.</span></li>
+                </ul>
+              </li>
+              <li><span>Размеры расширительного бака:</span>
+                <ul>
+                  <li><span>высота: 420 мм. (с краном)</span></li>
+                  <li><span>диаметр: 290 мм.</span></li>
+                </ul>
+              </li>
+              <li><span>Производство: Чешская Республика</span></li>
             </ul>
 
-            <div class="tab-content">
-              <div role="tabpanel" class="tab-pane fade in active" id="description"><p>Основой фильтров для воды <b>AQUEL</b> является полупроницаемая мембрана. Эта, первоначально  военная технология, постепенно, благодаря техническому прогрессу, находит путь в доступные по цене фильтрующие устройства для быта и промышленных предприятий. Величина самой маленькой известной бактерии на Земле составляет 0,009 микрона, величина самого маленького известного вируса 0,02 микрона. Отверстие в полупроницаемой мембране имеет диаметр 0,0005 микрона!</p>
-              <p>Единственное, что мембрана пропускает, это молекула воды и некоторое количество минералов и солей. Благодаря этому можно получить совершенно чистую воду из любого загрязненного источника. Так же, благодаря физическому явлению, называемому осмотическое давление, фильтры для воды <b>AQUEL</b> не нуждаются для своей работы в электричестве, достаточно небольшого давления воды на входе.</p>
-              </div>
-              <div role="tabpanel" class="tab-pane fade" id="feature">
-                <p>
-                  <ul>
-                    <li>Пригоден для воды из городского водопровода</li>
-                    <li>Установка под умывальник или согласно планировке заказчика.</li>
-                    <li>Эффективность фильтрации до 192 литров в сутки (может быть увеличена до 576 литров в сутки)</li>
-                    <li>Оптимальные условия работы: температура воды на входе 10-30 градусов по Цельсию, давление 2,45 - 10,5 бар</li>
-                    <li>Эффективность фильтрации 85 - 98 %</li>
-                    <li>Размеры:
-                      <ul>
-                        <li>высота: 420 мм.</li>
-                        <li>ширина: 380 мм.</li>
-                        <li>глубина: 180 мм.</li>
-                      </ul>
-                    </li>
-                    <li>Размеры расширительного бака:
-                      <ul>
-                        <li>высота: 420 мм. (с краном)</li>
-                        <li>диаметр: 290 мм.</li>
-                      </ul>
-                    </li>
-                    <li>Производство: Чешская Республика</li>
-                  </ul>
-                </p>
-              </div>
-              <div role="tabpanel" class="tab-pane fade" id="advantages">
-                  <p>
-                    <ul>
-                      <li>Механический фильтр PX 20</li>
-                      <li>Purtex PX 5 + CVCA (комбинация механического и угольного фильтра)</li>
-                      <li>Полупроницаемая мембрана</li>
-                      <li>Двухходовой клапан</li>
-                      <li>Накопительный бак 10 литров</li>
-                      <li>Ин-лайн фильтр</li>
-                      <li>Патрон для минерализации</li>
-                      <li>УФ лампа W4</li>
-                      <li>Основной кран (хром)</li>
-                      <li>Картридж AQUEL Energy</li>
-                    </ul>
-                  </p>
+            <h3 class="product__advantages">ПРЕИМУЩЕСТВА</h3>
+            <ul class="product__conten-list">
+              <li><span>Механический фильтр PX 20</span></li>
+              <li><span>Purtex PX 5 + CVCA (комбинация механического и угольного фильтра)</span></li>
+              <li><span>Полупроницаемая мембрана</span></li>
+              <li><span>Двухходовой клапан</span></li>
+              <li><span>Накопительный бак 10 литров</span></li>
+              <li><span>Ин-лайн фильтр</span></li>
+              <li><span>Патрон для минерализации</span></li>
+              <li><span>УФ лампа W4</span></li>
+              <li><span>Основной кран (хром)</span></li>
+              <li><span>Картридж AQUEL Energy</span></li>
+            </ul>
+
+            <h3 class="product__delivery">ДОСТАВКА</h3>
+            <p class="product__content">
+              Доставка Товара до покупателя осуществляется бесплатно. Средний срок доставки 7 дней, максимальный срок доставки 30 дней с момента оплаты.
+              Фильтр <strong>AQUEL 200</strong> может быть доставлен и смонтирован в следующих городах:
+            </p>
+            <p class="product__content">Великий Новгород, Владимир, Екатеринбург, Иваново, Ижевск, Йошкар-Ола, Казань, Калининград, Калуга, Киров, Кострома, Махачкала, Москва, Нижний.Новгород, Набережные Челны, Омск, Пермь, Рыбинск, Самара, Саратов, Санкт-Петербург, Сургут, Сыктывкар, Тверь, Тольятти, Томск, Тула, Уфа, Ухта (Республика Коми), Чайковский, Чебоксары. А так же, Краснодарский край и Ставропольский край.
+            </p>
+
+          </div><!-- /.container-article -->
+        </div><!-- /.advantages -->
+
+        <div class="card-block">
+          <h3 class="card-block__title">Что подойдет именно Вам?</h2>
+
+            <div class="container-article">
+
+              <div class="card">
+                <div class="card__img">
+                  <img src="../img/small-aquel-1000.png" alt="">
+                </div>
+                <div class="card__content">
+                  <h3 class="card__title">AQUEL 1000</h3>
+                  <p class="card__subtitle">Лучший выбор для офиса</p>
+                  <a class="card__button" href="aquel-1000.html">ПОДРОБНЕЕ</a>
+                </div>
               </div>
 
-              <div role="tabpanel" class="tab-pane fade" id="delivery">
-                <p>Доставка Товара до покупателя осуществляется бесплатно. Средний срок доставки 7 дней, максимальный срок доставки 30 дней с момента оплаты.
-                </p>
-                <p>Фильтр <strong>AQUEL 200</strong> может быть доставлен и смонтирован в следующих городах:</p>
-                <p class="advantages__delivery-content">Великий Новгород, Владимир, Екатеринбург, Иваново, Ижевск, Йошкар-Ола, Казань, Калининград, Калуга, Киров, Кострома, Махачкала, Москва, Нижний.Новгород, Набережные Челны, Омск, Пермь, Рыбинск, Самара, Саратов, Санкт-Петербург, Сургут, Сыктывкар, Тверь, Тольятти, Томск, Тула, Уфа, Ухта (Республика Коми), Чайковский, Чебоксары. А так же, Краснодарский край и Ставропольский край.</p>
+              <div class="card">
+                <div class="card__img">
+                  <img src="../img/small-aquel-zero-1.png" alt="">
+                </div>
+                <div class="card__content">
+                  <h3 class="card__title">AQUEL ZERO</h3>
+                  <p class="card__subtitle">Мобилен и универсален</p>
+                  <a class="card__button" href="aquel-zero.html">ПОДРОБНЕЕ</a>
+                </div>
               </div>
 
             </div>
-          </div>
-        </div>
+        </div><!-- /.card-block -->
 
-        <div class="card-block">
-          <h2 class="card-block__title">Что подойдет именно Вам?</h2>
-          <div class="divider-main divider-main--card"></div>
+        <div class="advice">
 
-          <div class="container-article">
+          <div class="advice-wrapper">
 
-              <div class="card">
-                <a href="aqua-air.html">
-                  <h3 class="card__title">Aqua Air</h3>
-                  <p class="card__content">Подходит для любого помещения</p>
-                  <div class="card__img">
-                    <img src="../img/aqua-air.png" alt="">
-                  </div>
-                </a>
+            <div class="advice__form-place">
+
+              <div class="advice-form__wrapper">
+                <p class="advice-form__subtitle">ОСТАЛИСЬ ВОПРОСЫ?</p>
+                <h3 class="advice-form__title">ПОЛУЧИТЕ КОНСУЛЬТАЦИЮ СПЕЦИАЛИСТА!</h3>
+                <form action="" class="advice-form" method="post">
+                  <input type="text" name="form-name" class="advice-form__name" placeholder="Имя" required="required">
+                  <input type="tel" name="form-phone" class="advice-form__phone" placeholder="Телефон" required="required">
+                  <button class="advice-form__button">ОТПРАВИТЬ</button>
+                </form>
               </div>
 
-              <div class="card">
-                <a href="aquel-1000.html">
-                  <h3 class="card__title">AQUEL 1000</h3>
-                  <p class="card__content">Идеально для дома и офиса</p>
-                  <div class="card__img">
-                    <img src="../img/small-aquel-1000.png" alt="">
-                  </div>
-                </a>
-              </div>
+            </div><!-- /.advice__form-place -->
 
-              <div class="card">
-                <a href="aquel-zero.html">
-                  <h3 class="card__title">AQUEL Zero</h3>
-                  <p class="card__content">Мобилен и универсален</p>
-                  <div class="card__img">
-                    <img src="../img/small-aquel-zero-1.png" alt="">
-                  </div>
-                </a>
-              </div>
+            <div class="advice__image">
+              <img src="../img/advice-bg.png" width="1200" height="800" alt="Фон блока консультации">
+            </div>
 
-          </div>
-        </div>
-
-        <div class="advice advice--single-product">
-
-          <h2 class="advice__title">Получите консультацию</h2>
-          <div class="container-article">
-            <p class="advice__content">Это бесплатно</p>
-            <p class="advice__content">Мы перезвоним прямо сейчас</p>
-            <p class="advice__content">Расскажем о наших фильтрах и <strong>патентах</strong></p>
-            <p class="advice__content">Подарим бесплатное сервисное обслуживание на год!</p>
-            <p class="advice__content advice__content--small">*Обслуживание на год всем новым покупателям в подарок!</p>
-          </div>
-          <div class="button-wrapper">
-            <a href="#callbackwidget" class="btn btn-default btn--form">КОНСУЛЬТАЦИЯ</a>
-          </div>
+          </div><!-- /.advice-wrapper -->
 
         </div><!-- /.advice -->
 
       </section><!-- /.main -->
 
       <section class="footer">
-
-        <div class="footer__wrapper">
-
-          <div class="footer__map">
-            <script type="text/javascript" charset="utf-8" async src="https://api-maps.yandex.ru/services/constructor/1.0/js/?um=constructor%3Accaa54940574372a1c161e5df547aad5ae90fad3c257cbba6c79cb33c8765081&amp;width=100%&amp;height=100%&amp;lang=ru_RU&amp;scroll=true"></script>
-          </div>
-          <div class="footer__form-contact-wrapper">
-            <div class="footer__form">
-              <h6 class="footer__form-title">Узнавайте о новинках и скидках</h6>
-              <form action="" method="post">
-                <input type="email" name="email" placeholder="Укажите Ваш e-mail">
-                <button type="submit" class="btn btn-default btn-footer__form">ОТПРАВИТЬ</button>
-              </form>
-            </div>
-            <div class="footer__contact">
-              <ul class="footer__contact-list">
-                <li class="footer__list-item-phone"><a href="tel:+79040459393">+7 904 045 93 93</a></li>
-                <li class="footer__list-item-email"><a href="mailto:support@aquel-shop.ru">Support@aquel-shop.ru</a></li>
-                <li class="footer__list-item-address">ул.Бетанкура, 2, офис №10</li>
-              </ul>
-            </div>
-          </div>
-
-        </div><!-- /.footer__wrapper -->
 
         <div class="footer__links-wrapper">
 
