--- a/catalog.html
+++ b/catalog.html
@@ -187,7 +187,7 @@
 
                 <ul class="nav navbar-nav">
                   <li class="dropdown">
-                    <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Каталог <span class="caret"></span></a>
+                    <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Фильтры <span class="caret"></span></a>
                     <ul class="dropdown-menu">
                       <li><a href="catalog/aquel-200.html">Фильтр Aquel 200</a></li>
                       <li role="separator" class="divider"></li>
@@ -215,6 +215,7 @@
       <section class="main">
 
         <div class="shop-showcase">
+          <h1 class="shop-showcase__title">Фильтры для воды</h1>
 
           <div class="container-article">
             <a href="catalog/aquel-1000.html">
@@ -224,18 +225,6 @@
               </div>
               <div class="shop-showcase__thumb">
                 <img src="img/aquel-1000.png" width="768" height="768" alt="Фильтр для воды AQUEL 1000">
-              </div>
-            </a>
-          </div>
-
-          <div class="container-article">
-            <a href="catalog/aquel-zero.html">
-              <div class="shop-showcase__desc">
-                <h2 class="shop-showcase__title">AQUEL Zero</h2>
-                <p class="shop-showcase__price">44 990 ₽</p>
-              </div>
-              <div class="shop-showcase__thumb">
-                <img src="img/aquel-zero.png" width="768" height="768" alt="Фильтр для воды AQUEL Zero">
               </div>
             </a>
           </div>
@@ -253,16 +242,17 @@
           </div>
 
           <div class="container-article">
-            <a href="catalog/aqua-air.html">
+            <a href="catalog/aquel-zero.html">
               <div class="shop-showcase__desc">
-                <h2 class="shop-showcase__title">Aqua Air</h2>
-                <p class="shop-showcase__price">Доступен предзаказ</p>
+                <h2 class="shop-showcase__title">AQUEL ZERO</h2>
+                <p class="shop-showcase__price">44 990 ₽</p>
               </div>
               <div class="shop-showcase__thumb">
-                <img src="img/aqua-air.png" width="768" height="768" alt="Очиститель воздуха Aqua Air">
+                <img src="img/aquel-zero-1.png" width="768" height="768" alt="Фильтр для воды AQUEL Zero">
               </div>
             </a>
           </div>
+
 
         </div><!-- /.shop-showcase -->
 
