--- a/catalog/aquel-1000.html
+++ b/catalog/aquel-1000.html
@@ -202,7 +202,7 @@
 
                 <ul class="nav navbar-nav">
                   <li class="dropdown">
-                    <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Каталог <span class="caret"></span></a>
+                    <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Фильтры <span class="caret"></span></a>
                     <ul class="dropdown-menu">
                       <li><a href="../catalog/aquel-200.html">Фильтр Aquel 200</a></li>
                       <li role="separator" class="divider"></li>
@@ -231,7 +231,9 @@
 
         <div class="single-product">
           <div class="container-article">
-
+            <div class="back-wrapper">
+              <a href="../catalog.html" class="back-button">НАЗАД</a>
+            </div>
             <div class="single-product__img-block">
               <img class="single-product__img" src="../img/aquel-1000.png" width="768" height="768" alt="">
             </div>
@@ -383,58 +385,44 @@
                   <img src="../img/small-aquel-zero-1.png" alt="">
                 </div>
                 <div class="card__content">
-                  <h3 class="card__title">AQUEL Zero</h3>
+                  <h3 class="card__title">AQUEL ZERO</h3>
                   <p class="card__subtitle">Мобилен и универсален</p>
                   <a class="card__button" href="aquel-zero.html">ПОДРОБНЕЕ</a>
                 </div>
               </div>
 
             </div>
-        </div>
+        </div><!-- /.card-block -->
 
-        <div class="advice advice--single-product">
+        <div class="advice">
 
-          <h2 class="advice__title">Получите консультацию</h2>
-          <div class="container-article">
-            <p class="advice__content">Это бесплатно</p>
-            <p class="advice__content">Мы перезвоним прямо сейчас</p>
-            <p class="advice__content">Расскажем о наших фильтрах и <strong>патентах</strong></p>
-            <p class="advice__content">Подарим бесплатное сервисное обслуживание на год!</p>
-            <p class="advice__content advice__content--small">*Обслуживание на год всем новым покупателям в подарок!</p>
-          </div>
-          <div class="button-wrapper">
-            <a href="#callbackwidget" class="btn btn-default btn--form">КОНСУЛЬТАЦИЯ</a>
-          </div>
+          <div class="advice-wrapper">
+
+            <div class="advice__form-place">
+
+              <div class="advice-form__wrapper">
+                <p class="advice-form__subtitle">ОСТАЛИСЬ ВОПРОСЫ?</p>
+                <h3 class="advice-form__title">ПОЛУЧИТЕ КОНСУЛЬТАЦИЮ СПЕЦИАЛИСТА!</h3>
+                <form action="" class="advice-form" method="post">
+                  <input type="text" name="form-name" class="advice-form__name" placeholder="Имя" required="required">
+                  <input type="tel" name="form-phone" class="advice-form__phone" placeholder="Телефон" required="required">
+                  <button class="advice-form__button">ОТПРАВИТЬ</button>
+                </form>
+              </div>
+
+            </div><!-- /.advice__form-place -->
+
+            <div class="advice__image">
+              <img src="../img/advice-bg.png" width="1200" height="800" alt="Фон блока консультации">
+            </div>
+
+          </div><!-- /.advice-wrapper -->
 
         </div><!-- /.advice -->
 
       </section><!-- /.main -->
 
       <section class="footer">
-
-        <div class="footer__wrapper">
-
-          <div class="footer__map">
-            <script type="text/javascript" charset="utf-8" async src="https://api-maps.yandex.ru/services/constructor/1.0/js/?um=constructor%3Accaa54940574372a1c161e5df547aad5ae90fad3c257cbba6c79cb33c8765081&amp;width=100%&amp;height=100%&amp;lang=ru_RU&amp;scroll=true"></script>
-          </div>
-          <div class="footer__form-contact-wrapper">
-            <div class="footer__form">
-              <h6 class="footer__form-title">Узнавайте о новинках и скидках</h6>
-              <form action="" method="post">
-                <input type="email" name="email" placeholder="Укажите Ваш e-mail">
-                <button type="submit" class="btn btn-default btn-footer__form">ОТПРАВИТЬ</button>
-              </form>
-            </div>
-            <div class="footer__contact">
-              <ul class="footer__contact-list">
-                <li class="footer__list-item-phone"><a href="tel:+79040459393">+7 904 045 93 93</a></li>
-                <li class="footer__list-item-email"><a href="mailto:support@aquel-shop.ru">Support@aquel-shop.ru</a></li>
-                <li class="footer__list-item-address">ул.Бетанкура, 2, офис №10</li>
-              </ul>
-            </div>
-          </div>
-
-        </div><!-- /.footer__wrapper -->
 
         <div class="footer__links-wrapper">
 
