--- a/catalog/aquel-zero.html
+++ b/catalog/aquel-zero.html
@@ -177,9 +177,9 @@
           </a>
         </div>
 
-            <div class="header__callback">
-              <a class="btn btn-default btn--callback" href="#" role="button">ОБРАТНЫЙ ЗВОНОК</a>
-            </div>
+        <div class="header__callback">
+          <a class="btn btn-default btn--callback" href="#" role="button">ОБРАТНЫЙ ЗВОНОК</a>
+        </div>
 
           </div><!-- /.contact-list-wrapper -->
 
@@ -202,7 +202,7 @@
 
                 <ul class="nav navbar-nav">
                   <li class="dropdown">
-                    <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Каталог <span class="caret"></span></a>
+                    <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Фильтры <span class="caret"></span></a>
                     <ul class="dropdown-menu">
                       <li><a href="../catalog/aquel-200.html">Фильтр Aquel 200</a></li>
                       <li role="separator" class="divider"></li>
@@ -231,19 +231,27 @@
 
         <div class="single-product">
           <div class="container-article">
-
-            <div class="single-product__content-block">
-              <h1 class="single-product__title">Фильтр</h1>
-              <h2 class="single-product__sub-title">AQUEL Zero</h2>
-              <p class="single-product__price">44 990 ₽</p>
-              <p class="single-product__content">Идеально для любого места</p>
-              <p class="single-product__content">Бесплатная доставка, 2-10 дней</p>
-              <p class="single-product__content">Не требует монтажа</p>
+            <div class="back-wrapper">
+              <a href="../catalog.html" class="back-button">НАЗАД</a>
             </div>
+
             <div class="single-product__img-block">
               <img class="single-product__img" src="../img/aquel-zero.png" alt="">
             </div>
-            <div class="single-product__button-wrapper">
+            <div class="single-product__content-block">
+              <div class="single-product__header">
+                <h1 class="single-product__title">ФИЛЬТР</h1>
+                <p class="single-product__price">44 990 ₽</p>
+                <h2 class="single-product__sub-title">AQUEL ZERO</h2>
+              </div>
+
+              <ul class="single-product__list">
+                <li class="single-product__list-item-aquel-zero-one">Идеально для любого места</li>
+                <li class="single-product__list-item-aquel-zero-two">Бесплатная доставка, 2-10 дней</li>
+                <li class="single-product__list-item-aquel-zero-three">Не требует монтажа</li>
+              </ul>
+              <div class="single-product__button-wrapper">
+              </div>
               <a href="#collapsePayment" class="btn btn-default btn--buy" role="button" data-toggle="collapse" aria-expanded="false" aria-controls="collapsePayment">ОФОРМИТЬ</a>
               <div class="collapse" id="collapsePayment">
                 <div class="well">
@@ -278,141 +286,105 @@
 
         <div class="advantages">
           <div class="container-article">
-            <!-- Nav tabs -->
-            <ul class="nav nav-tabs" role="tablist">
-              <li role="presentation" class="active"><a href="#description" aria-controls="description" role="tab" data-toggle="tab">Описание</a></li>
-              <li role="presentation"><a href="#feature" aria-controls="feature" role="tab" data-toggle="tab">Характеристики</a></li>
-              <li role="presentation"><a href="#advantages" aria-controls="advantages" role="tab" data-toggle="tab">Преимущества</a></li>
-              <li role="presentation"><a href="#delivery" aria-controls="delivery" role="tab" data-toggle="tab">Доставка</a></li>
+            <h3 class="product__description">ОПИСАНИЕ</h3>
+            <p class="product__content"><strong>AQUEL Zero</strong> это революционно новая технология компактной фильтрации без необходимости подключения к водопроводу. Идеально подходит для офиса, семьи и индивидуального использования. Модель проста в обслуживании - одна панель управления всеми функциями, световая индикация состояния системы. Простая замена фильтрующих картриджей - "повернул, вынул, подключил новый",  справится даже подросток. AQUEL Zero может быть установлен в любом удобном месте, занимает мало места. Для использования достаточно подключить электропитание и залить 4 литра любой воды и через 10 минут Вы получите совершенно чистую, минерализованную воду, объемом 2 литра!</p>
+
+            <h3 class="product__feature">ХАРАКТЕРИСТИКИ</h3>
+            <ul class="product__conten-list">
+              <li><span>1 ступень очистки - фильтр PP 5 микрон</span></li>
+              <li><span>2 ступень очистки - угольный фильтр</span></li>
+              <li><span>3 ступень очистки - мембрана обратного осмоса</span></li>
+              <li><span>4 ступень - минерализация</span></li>
+              <li><span>Нагнетательный насос UP - 7000</span></li>
+              <li><span>Производительность мембраны - 12 литров в час</span></li>
+              <li><span>Электропитание - 220 вольт</span></li>
+              <li><span>Температура воды на входе : 5 - 45 градусов по Цельсию</span></li>
+              <li><span>Размеры:</span>
+                <ul>
+                  <li><span>высота: 415 мм.</span></li>
+                  <li><span>ширина: 250 мм.</span></li>
+                  <li><span>глубина: 380 мм.</span></li>
+                </ul>
+              </li>
+              <li><span>Производство: Чешская Республика</span></li>
             </ul>
 
-            <div class="tab-content">
-              <div role="tabpanel" class="tab-pane fade in active" id="description"><p><strong>AQUEL Zero</strong> это революционно новая технология компактной фильтрации без необходимости подключения к водопроводу. Идеально подходит для офиса, семьи и индивидуального использования. Модель проста в обслуживании - одна панель управления всеми функциями, световая индикация состояния системы. Простая замена фильтрующих картриджей - "повернул, вынул, подключил новый",  справится даже подросток. AQUEL Zero может быть установлен в любом удобном месте, занимает мало места. Для использования достаточно подключить электропитание и залить 4 литра любой воды и через 10 минут Вы получите совершенно чистую, минерализованную воду, объемом 2 литра!</p></div>
-              <div role="tabpanel" class="tab-pane fade" id="feature">
-                <p>
-                  <ul>
-                    <li>1 ступень очистки - фильтр PP 5 микрон</li>
-                    <li>2 ступень очистки - угольный фильтр</li>
-                    <li>3 ступень очистки - мембрана обратного осмоса</li>
-                    <li>4 ступень - минерализация</li>
-                    <li>Нагнетательный насос UP - 7000</li>
-                    <li>Производительность мембраны - 12 литров в час</li>
-                    <li>Электропитание - 220 вольт</li>
-                    <li>Температура воды на входе : 5 - 45 градусов по Цельсию</li>
-                    <li>Размеры:
-                      <ul>
-                        <li>высота: 415 мм.</li>
-                        <li>ширина: 250 мм.</li>
-                        <li>глубина: 380 мм.</li>
-                      </ul>
-                    </li>
-                    <li>Производство: Чешская Республика</li>
-                  </ul>
-                </p>
-              </div>
-              <div role="tabpanel" class="tab-pane fade" id="advantages">
-                  <p>
-                    <ul>
-                      <li>AQ-82 Фильтрующий картридж 5 микрон - очищает от механических загрязнений</li>
-                      <li>AQ-92 Угольный фильтр CarbonBlock - очищает воду от хлора</li>
-                      <li>Мембрана обратного осмоса - очищает воду от металлов, нитритов, нитратов, бактерий и вирусов</li>
-                      <li>Обогащение минералами - обеспечивает обогащение воды необходимыми минералами, повышает pH</li>
-                    </ul>
-                  </p>
+            <h3 class="product__advantages">ПРЕИМУЩЕСТВА</h3>
+            <ul class="product__conten-list">
+              <li><span>AQ-82 Фильтрующий картридж 5 микрон - очищает от механических загрязнений</span></li>
+              <li><span>AQ-92 Угольный фильтр CarbonBlock - очищает воду от хлора</span></li>
+              <li><span>Мембрана обратного осмоса - очищает воду от металлов, нитритов, нитратов, бактерий и вирусов</span></li>
+              <li><span>Обогащение минералами - обеспечивает обогащение воды необходимыми минералами, повышает pH</span></li>
+            </ul>
+
+            <h3 class="product__delivery">ДОСТАВКА</h3>
+            <p class="product__content">
+              Доставка Товара до покупателя осуществляется бесплатно. Средний срок доставки 7 дней, максимальный срок доставки 30 дней с момента оплаты.
+            </p>
+            <p class="product__content">Фильтр <strong>AQUEL Zero</strong> может быть доставлен в любой город Российской Федерации и стран СНГ.</p>
+
+          </div><!-- /.container-article -->
+        </div><!-- /.advantages -->
+
+        <div class="card-block">
+          <h3 class="card-block__title">Что подойдет именно Вам?</h2>
+
+            <div class="container-article">
+
+              <div class="card">
+                <div class="card__img">
+                  <img src="../img/small-aquel-1000.png" alt="">
+                </div>
+                <div class="card__content">
+                  <h3 class="card__title">AQUEL 1000</h3>
+                  <p class="card__subtitle">Лучший выбор для офиса</p>
+                  <a class="card__button" href="aquel-1000.html">ПОДРОБНЕЕ</a>
+                </div>
               </div>
 
-              <div role="tabpanel" class="tab-pane fade" id="delivery">
-                <p>Доставка Товара до покупателя осуществляется бесплатно. Средний срок доставки 7 дней, максимальный срок доставки 30 дней с момента оплаты.
-                </p>
-                <p>Фильтр <strong>AQUEL Zero</strong> может быть доставлен в любой город Российской Федерации и стран СНГ.</p>
+              <div class="card">
+                <div class="card__img">
+                  <img src="../img/aquel-200+box-slider.png" alt="">
+                </div>
+                <div class="card__content">
+                  <h3 class="card__title">AQUEL 200</h3>
+                  <p class="card__subtitle">Лучший выбор для дома</p>
+                  <a class="card__button" href="aquel-200.html">ПОДРОБНЕЕ</a>
+                </div>
               </div>
 
             </div>
-          </div>
-        </div>
+          </div><!-- /.card-block -->
 
-        <div class="card-block">
-          <h2 class="card-block__title">Что подойдет именно Вам?</h2>
-          <div class="divider-main divider-main--card"></div>
+        <div class="advice">
 
-          <div class="container-article">
+          <div class="advice-wrapper">
 
-              <div class="card">
-                <a href="aqua-air.html">
-                  <h3 class="card__title">Aqua Air</h3>
-                  <p class="card__content">Подходит для любого помещения</p>
-                  <div class="card__img">
-                    <img src="../img/aqua-air.png" alt="">
-                  </div>
-                </a>
+            <div class="advice__form-place">
+
+              <div class="advice-form__wrapper">
+                <p class="advice-form__subtitle">ОСТАЛИСЬ ВОПРОСЫ?</p>
+                <h3 class="advice-form__title">ПОЛУЧИТЕ КОНСУЛЬТАЦИЮ СПЕЦИАЛИСТА!</h3>
+                <form action="" class="advice-form" method="post">
+                  <input type="text" name="form-name" class="advice-form__name" placeholder="Имя" required="required">
+                  <input type="tel" name="form-phone" class="advice-form__phone" placeholder="Телефон" required="required">
+                  <button class="advice-form__button">ОТПРАВИТЬ</button>
+                </form>
               </div>
 
-              <div class="card">
-                <a href="aquel-1000.html">
-                  <h3 class="card__title">AQUEL 1000</h3>
-                  <p class="card__content">Идеально для дома и офиса</p>
-                  <div class="card__img">
-                    <img src="../img/small-aquel-1000.png" alt="">
-                  </div>
-                </a>
-              </div>
+            </div><!-- /.advice__form-place -->
 
-              <div class="card">
-                <a href="aquel-200.html">
-                  <h3 class="card__title">AQUEL 200</h3>
-                  <p class="card__content">Лучший выбор для дома</p>
-                  <div class="card__img">
-                    <img src="../img/small-aquel-200.png" alt="">
-                  </div>
-                </a>
-              </div>
+            <div class="advice__image">
+              <img src="../img/advice-bg.png" width="1200" height="800" alt="Фон блока консультации">
+            </div>
 
-          </div>
-        </div>
-
-        <div class="advice advice--single-product">
-
-          <h2 class="advice__title">Получите консультацию</h2>
-          <div class="container-article">
-            <p class="advice__content">Это бесплатно</p>
-            <p class="advice__content">Мы перезвоним прямо сейчас</p>
-            <p class="advice__content">Расскажем о наших фильтрах и <strong>патентах</strong></p>
-            <p class="advice__content">Подарим бесплатное сервисное обслуживание на год!</p>
-            <p class="advice__content advice__content--small">*Обслуживание на год всем новым покупателям в подарок!</p>
-          </div>
-          <div class="button-wrapper">
-            <a href="#callbackwidget" class="btn btn-default btn--form">КОНСУЛЬТАЦИЯ</a>
-          </div>
+          </div><!-- /.advice-wrapper -->
 
         </div><!-- /.advice -->
 
       </section><!-- /.main -->
 
       <section class="footer">
-
-        <div class="footer__wrapper">
-
-          <div class="footer__map">
-            <script type="text/javascript" charset="utf-8" async src="https://api-maps.yandex.ru/services/constructor/1.0/js/?um=constructor%3Accaa54940574372a1c161e5df547aad5ae90fad3c257cbba6c79cb33c8765081&amp;width=100%&amp;height=100%&amp;lang=ru_RU&amp;scroll=true"></script>
-          </div>
-          <div class="footer__form-contact-wrapper">
-            <div class="footer__form">
-              <h6 class="footer__form-title">Узнавайте о новинках и скидках</h6>
-              <form action="" method="post">
-                <input type="email" name="email" placeholder="Укажите Ваш e-mail">
-                <button type="submit" class="btn btn-default btn-footer__form">ОТПРАВИТЬ</button>
-              </form>
-            </div>
-            <div class="footer__contact">
-              <ul class="footer__contact-list">
-                <li class="footer__list-item-phone"><a href="tel:+79040459393">+7 904 045 93 93</a></li>
-                <li class="footer__list-item-email"><a href="mailto:support@aquel-shop.ru">Support@aquel-shop.ru</a></li>
-                <li class="footer__list-item-address">ул.Бетанкура, 2, офис №10</li>
-              </ul>
-            </div>
-          </div>
-
-        </div><!-- /.footer__wrapper -->
 
         <div class="footer__links-wrapper">
 
