--- a/blog.html
+++ b/blog.html
@@ -215,20 +215,8 @@
       <section class="main">
 
         <div class="introduction introduction--blog">
-          <h1 class="introduction__title animation-fadeIn">Блог</h1>
+          <h1 class="introduction__title animation-fadeIn">БЛОГ</h1>
           <p class="introduction__content introduction__content--blog animation-fadeIn">О воде, здоровье и фильтрах</p>
-          <span class="introduction__aquel-title animation-fadeIn">
-            <svg version="1.1"  x="0px" y="0px" width="130px" height="130px" viewBox="0 0 50 50"  xml:space="preserve">
-              <path d="M48.336,7.54c-0.701,0-1.359,0.007-2.018,0.024V5.326h-0.734c-14.262,0-19.043,3.411-20.585,5.252
-              c-1.542-1.841-6.323-5.252-20.585-5.252H3.68v2.237C3.022,7.545,2.364,7.54,1.664,7.54H0V39.89h1.664
-              c17.595,0,21.186,4.035,21.698,4.784h3.302c0.557-0.784,4.218-4.784,21.673-4.784H50V7.54H48.336z M23.899,38.431
-              c-2.457-1.812-7.611-3.914-18.383-4.054V7.175c15.087,0.194,18.001,4.327,18.383,5V38.431z M44.484,34.377
-              c-10.772,0.14-15.926,2.24-18.383,4.054V12.184c0.416-0.737,3.412-4.814,18.383-5.007V34.377z"/>
-            </svg>
-          </span>
-          <div class="blog-teaser__social-wrapper">
-            <div class="ya-share2 blog-teaser__social animation-fadeIn" data-services="vkontakte,facebook,odnoklassniki,twitter"></div>
-          </div>
         </div>
 
         <div class="blog">
@@ -244,8 +232,8 @@
                   </div>
                   <div class="blog-teaser__content-wrapper">
                     <h2 class="blog-teaser__title">Бытовые фильтры для воды</h2>
-                    <div class="divider-main"></div>
                     <p class="blog-teaser__content">Уже не первый раз ловите себя на мысли, что вода из под крана отдаёт специфическим запахом, а вкус ужасен? Значит, пришло время купить бытовые фильтры для воды, чтобы уберечь себя и своих близких от грязной воды.</p>
+                    <p class="blog-teaser__continue">Читать полностью</p>
                   </div>
                 </a>
               </article>
@@ -258,8 +246,8 @@
                   </div>
                   <div class="blog-teaser__content-wrapper">
                     <h2 class="blog-teaser__title">Выбор фильтра для воды</h2>
-                    <div class="divider-main"></div>
                     <p class="blog-teaser__content">Известно, что водопроводная вода не всегда хорошего качества. Только представьте сколько плесени, песка и бактерий собирает она по водопроводным трубам до того как попасть в стакан.</p>
+                    <p class="blog-teaser__continue">Читать полностью</p>
                   </div>
                 </a>
               </article>
@@ -272,8 +260,8 @@
                   </div>
                   <div class="blog-teaser__content-wrapper">
                     <h2 class="blog-teaser__title">Фильтрация воды в квартире</h2>
-                    <div class="divider-main"></div>
                     <p class="blog-teaser__content">Если вы решили перейти на употребление чистой воды, но никак не можете определиться, какой фильтр для очистки воды в квартире подойдёт вам? Не переживайте, сегодня мы поведаем о том, как найти оптимальный вариант.</p>
+                    <p class="blog-teaser__continue">Читать полностью</p>
                   </div>
                 </a>
               </article>
@@ -286,8 +274,8 @@
                   </div>
                   <div class="blog-teaser__content-wrapper">
                     <h2 class="blog-teaser__title">Сетчатые и картриджные фильтры</h2>
-                    <div class="divider-main"></div>
                     <p class="blog-teaser__content">Для защиты водопроводных труб от механического износа и засорения рекомендуется использовать фильтры механической очистки. Они бывают сетчатые и картриджные. В этой статье мы подробно расскажем о таких водоочистительных приборах.</p>
+                    <p class="blog-teaser__continue">Читать полностью</p>
                   </div>
                 </a>
               </article>
@@ -300,8 +288,8 @@
                   </div>
                   <div class="blog-teaser__content-wrapper">
                     <h2 class="blog-teaser__title">Фильтры под мойку</h2>
-                    <div class="divider-main"></div>
                     <p class="blog-teaser__content">Водопроводная вода без предварительной очистки часто мутного цвета с неприятным запахом. Пользуясь нефильтрованной водой в быту, сложно приготовить вкусную еду, ароматный кофе или чай. Без водоочистительных приборов нам не обойтись. Сегодня рынок радует обилием фильтров, различающихся по ценовой политике, функциям, по способу фильтрации и месту установки.</p>
+                    <p class="blog-teaser__continue">Читать полностью</p>
                   </div>
                 </a>
               </article>
@@ -313,9 +301,8 @@
                     <p class="blog-time__reading">Время чтения: 5 минут</p>
                   </div>
                   <div class="blog-teaser__content-wrapper">
-                    <h2 class="blog-teaser__title">Фильтры воды для дома</h2>
-                    <div class="divider-main"></div>
-                    <p class="blog-teaser__content">Вода — главная составляющая в жизни человека. В среднем за сутки мы потребляем 2-3 литра жидкости. Но какой? Часто, это нефильтрованная вода, содержащая в себе вредные вещества, которые поступают в организм. Как защитить здоровье от нежелательной опасности? Правильным решением этой проблемы будет установка фильтра.</p>
+                    <h2 class="blog-teaser__title">Фильтры воды для дома</h2>                    <p class="blog-teaser__content">Вода — главная составляющая в жизни человека. В среднем за сутки мы потребляем 2-3 литра жидкости. Но какой? Часто, это нефильтрованная вода, содержащая в себе вредные вещества, которые поступают в организм. Как защитить здоровье от нежелательной опасности? Правильным решением этой проблемы будет установка фильтра.</p>
+                    <p class="blog-teaser__continue">Читать полностью</p>
                   </div>
                 </a>
               </article>
@@ -328,8 +315,8 @@
                   </div>
                   <div class="blog-teaser__content-wrapper">
                     <h2 class="blog-teaser__title">Очистка воды для дачи</h2>
-                    <div class="divider-main"></div>
                     <p class="blog-teaser__content">Если вы строите дачу, первым делом  обдумайте водоснабжение. Как вариант, очищенную воду можно привозить с собой на дачу. Но такое решение проблемы подойдёт вам тогда, когда вы проводите мало времени в своём загородном доме. А что делать, если ваше время пребывания на даче длиться больше двух дней?</p>
+                    <p class="blog-teaser__continue">Читать полностью</p>
                   </div>
                 </a>
               </article>
@@ -342,8 +329,8 @@
                   </div>
                   <div class="blog-teaser__content-wrapper">
                     <h2 class="blog-teaser__title">Фильтры для воды для офиса</h2>
-                    <div class="divider-main"></div>
                     <p class="blog-teaser__content">Удивительно, но больше всего времени мы проводим на работе. В среднем рабочий день длится до 8 часов, иногда и дольше. Для полной концентрации ума мы чаще всего пьём  кофе или чай. Не задумывались о том, какую воду вы используете для приготовления этих двух напитков?</p>
+                    <p class="blog-teaser__continue">Читать полностью</p>
                   </div>
                 </a>
               </article>
@@ -356,8 +343,8 @@
                   </div>
                   <div class="blog-teaser__content-wrapper">
                     <h2 class="blog-teaser__title">Грубые фильтры для воды</h2>
-                    <div class="divider-main"></div>
                     <p class="blog-teaser__content">При употреблении воды без предварительной очистки, мы не обращаем внимание на то, какой вред наносим здоровью. Дело в том, что вода это главный растворитель для химических компонентов, которые оказывает негативное воздействие на внутренние органы человека.</p>
+                    <p class="blog-teaser__continue">Читать полностью</p>
                   </div>
                 </a>
               </article>
@@ -368,30 +355,6 @@
       </section><!-- /.main -->
 
       <section class="footer">
-
-        <div class="footer__wrapper">
-
-          <div class="footer__map">
-            <script type="text/javascript" charset="utf-8" async src="https://api-maps.yandex.ru/services/constructor/1.0/js/?um=constructor%3Accaa54940574372a1c161e5df547aad5ae90fad3c257cbba6c79cb33c8765081&amp;width=100%&amp;height=100%&amp;lang=ru_RU&amp;scroll=true"></script>
-          </div>
-          <div class="footer__form-contact-wrapper">
-            <div class="footer__form">
-              <h6 class="footer__form-title">Узнавайте о новинках и скидках</h6>
-              <form action="" method="post">
-                <input type="email" name="email" placeholder="Укажите Ваш e-mail">
-                <button type="submit" class="btn btn-default btn-footer__form">ОТПРАВИТЬ</button>
-              </form>
-            </div>
-            <div class="footer__contact">
-              <ul class="footer__contact-list">
-                <li class="footer__list-item-phone"><a href="tel:+79040459393">+7 904 045 93 93</a></li>
-                <li class="footer__list-item-email"><a href="mailto:support@aquel-shop.ru">Support@aquel-shop.ru</a></li>
-                <li class="footer__list-item-address">ул.Бетанкура, 2, офис №10</li>
-              </ul>
-            </div>
-          </div>
-
-        </div><!-- /.footer__wrapper -->
 
         <div class="footer__links-wrapper">
 
