--- a/catalog/aquel-1000.html
+++ b/catalog/aquel-1000.html
@@ -232,7 +232,7 @@
         <div class="single-product">
           <div class="container-article">
             <div class="back-wrapper">
-              <a href="../catalog.html" class="back-button">НАЗАД</a>
+              <a href="../catalog.html" class="back-button">КАТАЛОГ</a>
             </div>
             <div class="single-product__img-block">
               <img class="single-product__img" src="../img/aquel-1000.png" width="768" height="768" alt="">
