--- a/catalog/aquel-zero.html
+++ b/catalog/aquel-zero.html
@@ -232,11 +232,11 @@
         <div class="single-product">
           <div class="container-article">
             <div class="back-wrapper">
-              <a href="../catalog.html" class="back-button">НАЗАД</a>
+              <a href="../catalog.html" class="back-button">КАТАЛОГ</a>
             </div>
 
             <div class="single-product__img-block">
-              <img class="single-product__img" src="../img/aquel-zero.png" alt="">
+              <img class="single-product__img" src="../img/aquel-zero-1.png" alt="">
             </div>
             <div class="single-product__content-block">
               <div class="single-product__header">
