--- a/catalog.html
+++ b/catalog.html
@@ -215,7 +215,7 @@
       <section class="main">
 
         <div class="shop-showcase">
-          <h1 class="shop-showcase__title">Фильтры для воды</h1>
+          <h1 class="shop-showcase__title">ФИЛЬТРЫ ДЛЯ ВОДЫ</h1>
 
           <div class="container-article">
             <a href="catalog/aquel-1000.html">
@@ -236,7 +236,7 @@
                 <p class="shop-showcase__price">45 990 ₽</p>
               </div>
               <div class="shop-showcase__thumb">
-                <img src="img/small-aquel-200.png" width="768" height="768" alt="Фильтр для воды AQUEL 200">
+                <img src="img/aquel-200+box-slider.png" width="768" height="768" alt="Фильтр для воды AQUEL 200">
               </div>
             </a>
           </div>
